--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lazy_static = "1.4.0"
-xtra = { version = "0.5.1", features = ["with-async_std-1"] }
-async-std = { version = "1.9.0" }
 async-trait = "0.1.36"
+flume = { version = "0.10.7" }
+async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
 
 [[bin]]
 name = "main"
